--- a/2_layout/6_grid_system _small/index.html
+++ b/2_layout/6_grid_system _small/index.html
@@ -10,24 +10,14 @@
 <body>
 <div class="container">
    <div class="row">
-      <div class="col">auto</div>
-      <div class="col">auto</div>
-      <div class="col">auto</div>
+      <div class="col-sm-8">sm-8</div>
+      <div class="col-sm-4">sm-4</div>
    </div>
    <div class="row">
       <div class="col">auto</div>
-      <div class="col-5">Cinco colunas</div>
+      <div class="col-sm-5">sm-5</div>
       <div class="col">auto</div>
    </div>
-   <div class="row">
-      <div class="col">auto</div>
-      <div class="col-3">3 colunas</div>
-      <div class="col-3">3 colunas</div>
-      <div class="col">auto</div>
-   </div>
-   <div class="row">
-      <div class="col">auto</div>  
-</div>
 </div>
 
 
