--- a/2_layout/7_grid_system _mobile/index.html
+++ b/2_layout/7_grid_system _mobile/index.html
@@ -9,25 +9,23 @@
 </head>
 <body>
 <div class="container">
+    <!--resolução 765px -->
    <div class="row">
-      <div class="col">auto</div>
-      <div class="col">auto</div>
-      <div class="col">auto</div>
+      <div class="col col-md-8"></div>
+      <div class="col col-md-4"></div>
+      
    </div>
    <div class="row">
-      <div class="col">auto</div>
-      <div class="col-5">Cinco colunas</div>
-      <div class="col">auto</div>
+    <div class="col-5 col-md-2"></div>
+    <div class="col-2 col-md-4"></div>
+    <div class="col-5 col-md-4"></div>
    </div>
    <div class="row">
-      <div class="col">auto</div>
-      <div class="col-3">3 colunas</div>
-      <div class="col-3">3 colunas</div>
-      <div class="col">auto</div>
+    <div class="col-4 col-sm-2 col-md-3"></div>
+    <div class="col-4 col-sm-2 col-md-3"></div>
+    <div class="col-2 col-sm-4 col-md-3"></div>
+    <div class="col-2 col-sm-4 col-md-3"></div>
    </div>
-   <div class="row">
-      <div class="col">auto</div>  
-</div>
 </div>
 
 
