--- a/2_layout/8_grid_system-order/index.html
+++ b/2_layout/8_grid_system-order/index.html
@@ -8,28 +8,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="container">
-   <div class="row">
-      <div class="col">auto</div>
-      <div class="col">auto</div>
-      <div class="col">auto</div>
-   </div>
-   <div class="row">
-      <div class="col">auto</div>
-      <div class="col-5">Cinco colunas</div>
-      <div class="col">auto</div>
-   </div>
-   <div class="row">
-      <div class="col">auto</div>
-      <div class="col-3">3 colunas</div>
-      <div class="col-3">3 colunas</div>
-      <div class="col">auto</div>
-   </div>
-   <div class="row">
-      <div class="col">auto</div>  
-</div>
-</div>
 
+<!--Order-sm ordena a partir da largura small-->
+
+ <div class="container"> 
+  
+<div class="row">
+
+  <div class="col order-sm-3">Primeira exbição</div>
+  <div class="col order-sm-2">Segunda exibição</div>
+  <div class="col order-sm-1">Terceira exibição</div>
+
+ </div>
+ 
+ <div class="row">
+    <div class="col order-sm-4">Primeira exbição</div>
+    <div class="col order-sm-3">Segunda exbição</div>
+    <div class="col order-sm-2">Terceira exibição</div>
+    <div class="col order-sm-1">Quarta exibição</div>
+  
+    </div>
+</div>
 
     <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/@popperjs/core@2"></script>
