--- a/3_flexBox/2_flexrow_direcao_x/1_introducao_FlexBox/index.html
+++ b/3_flexBox/2_flexrow_direcao_x/1_introducao_FlexBox/index.html
@@ -8,28 +8,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="container">
-   <div class="row">
-      <div class="col">auto</div>
-      <div class="col">auto</div>
-      <div class="col">auto</div>
-   </div>
-   <div class="row">
-      <div class="col">auto</div>
-      <div class="col-5">Cinco colunas</div>
-      <div class="col">auto</div>
-   </div>
-   <div class="row">
-      <div class="col">auto</div>
-      <div class="col-3">3 colunas</div>
-      <div class="col-3">3 colunas</div>
-      <div class="col">auto</div>
-   </div>
-   <div class="row">
-      <div class="col">auto</div>  
-</div>
-</div>
 
+ <div class="container"> 
+    <div class="d-flex flex-row">
+        <div class="p-2">1</div>
+        <div class="p-2">2</div>
+        <div class="p-2">3</div>
+    </div>
+
+ <!--flex-row-reverse alinha para direita-->
+    <div class="d-flex flex-row-reverse">
+        <div class="p-2">1</div>
+        <div class="p-2">2</div>
+        <div class="p-2">3</div>
+    </div>
+
+    <!--flex-row-reverse alinha para direita acima da resoluçao sm-->
+    <div class="d-flex flex-sm-row-reverse">
+        <div class="p-2">1</div>
+        <div class="p-2">2</div>
+        <div class="p-2">3</div>
+    </div>
+</div>
 
     <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/@popperjs/core@2"></script>
