--- a/2_layout/10_grid_system-nesting/index.html
+++ b/2_layout/10_grid_system-nesting/index.html
@@ -8,28 +8,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="container">
-   <div class="row">
-      <div class="col">auto</div>
-      <div class="col">auto</div>
-      <div class="col">auto</div>
-   </div>
-   <div class="row">
-      <div class="col">auto</div>
-      <div class="col-5">Cinco colunas</div>
-      <div class="col">auto</div>
-   </div>
-   <div class="row">
-      <div class="col">auto</div>
-      <div class="col-3">3 colunas</div>
-      <div class="col-3">3 colunas</div>
-      <div class="col">auto</div>
-   </div>
-   <div class="row">
-      <div class="col">auto</div>  
-</div>
-</div>
 
+<!--nesting: são os niveis de classes-->
+
+ <div class="container"> 
+    <div class="row">
+      <div class="bg col-12">nivel 1
+        <div class="row">
+            <div class="bg col-8">Nivel 2
+                <div class="row">
+                  <div class="bg col-3">Nivel 3</div>
+                  <div class="bg col-9">Nivel 3</div>
+                </div>
+            </div>
+
+            <div class="bg col-4">Nivel 2</div>
+        </div>
+      </div>
+    </div>
+
+</div>
 
     <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/@popperjs/core@2"></script>
