--- a/2_layout/9_grid_system-offset/index.html
+++ b/2_layout/9_grid_system-offset/index.html
@@ -8,28 +8,34 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="container">
-   <div class="row">
-      <div class="col">auto</div>
-      <div class="col">auto</div>
-      <div class="col">auto</div>
-   </div>
-   <div class="row">
-      <div class="col">auto</div>
-      <div class="col-5">Cinco colunas</div>
-      <div class="col">auto</div>
-   </div>
-   <div class="row">
-      <div class="col">auto</div>
-      <div class="col-3">3 colunas</div>
-      <div class="col-3">3 colunas</div>
-      <div class="col">auto</div>
-   </div>
-   <div class="row">
-      <div class="col">auto</div>  
-</div>
-</div>
 
+<!--offset-sm ocupa o espaço de uma div (Div fantasma)-->
+
+ <div class="container"> 
+  <div class="row">
+    <div class="col-sm-4">Div A</div>
+
+    <div class="col-sm-4 offset-sm-4">Div B</div>
+
+  </div>
+  <div class="row">
+    <div class="col-sm-5">Div A</div>
+
+    <div class="col-sm-5 offset-sm-2">Div C</div>
+
+  </div>
+  <div class="row">
+    <div class="col-sm-2">Div C</div>
+
+    <div class="col-sm-2 offset-sm-2">Div D</div>
+
+    <div class="col-sm-2">Div E</div>
+
+    <div class="col-sm-2 offset-sm-2">Div F</div>
+
+  </div>
+
+</div>
 
     <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/@popperjs/core@2"></script>
