--- a/4_tipografia/1_titulo/index.html
+++ b/4_tipografia/1_titulo/index.html
@@ -8,21 +8,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!--nesting: são os níveis de classes.-->
-<div class="container">
-    <div class="row">
-        <div class="bg col-12">Nível 1
-            <div class="row">
-                <div class="bg col-8">Nível 2
-                    <div class="row">
-                        <div class="bg col-3">Nível 3</div>
-                        <div class="bg col-9">Nível 3</div>
-                    </div>
-                </div>
-                <div class="bg col-4">Nível 2</div>
-            </div>
-        </div>
-    </div>
+   
+<div class="container"> 
+    <!--h$*6{texto}-->
+    <h1>texto</h1>
+    <h2>texto</h2>
+    <h3>texto</h3>
+    <h4>texto</h4>
+    <h5>texto</h5>
+    <h6>texto</h6>
+
+    <hr>
+    <!--p.h$*6{texto}-->
+    <p class="h1">texto</p>
+    <p class="h2">texto</p>
+    <p class="h3">texto</p>
+    <p class="h4">texto</p>
+    <p class="h5">texto</p>
+    <p class="h6">texto</p>
 </div>
   
 
