--- a/4_tipografia/2_listas/index.html
+++ b/4_tipografia/2_listas/index.html
@@ -8,21 +8,30 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!--nesting: são os níveis de classes.-->
-<div class="container">
-    <div class="row">
-        <div class="bg col-12">Nível 1
-            <div class="row">
-                <div class="bg col-8">Nível 2
-                    <div class="row">
-                        <div class="bg col-3">Nível 3</div>
-                        <div class="bg col-9">Nível 3</div>
-                    </div>
-                </div>
-                <div class="bg col-4">Nível 2</div>
-            </div>
-        </div>
-    </div>
+   
+<div class="container"> 
+     <ul type="circle">
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+     </ul>
+<hr>
+<!--Retira lista-->
+<ul class="list-unstyled">
+    <li>1</li>
+    <li>2</li>
+    <li>3</li>
+ </ul>
+
+<hr>
+<!--na mesma linha-->
+<ul class="list-inline">
+    <li class="list-inline-item">1</li>
+    <li class="list-inline-item">2</li>
+    <li class="list-inline-item">3</li>
+ </ul>
+
+
 </div>
   
 
