--- a/2_layout/3_grid_system/index.html
+++ b/2_layout/3_grid_system/index.html
@@ -12,7 +12,7 @@
    <div class="row">
       <div class="col-12">
          <header>
-            header
+            header-12
          </header>
       </div>
    </div>
@@ -21,8 +21,9 @@
          <nav>nav-4</nav>
       </div>
       <div class="col-8">
-         <main>content-8</main>
+         <main>Content - 8</main>
       </div>
+      
    </div>
    
 </div>
