--- a/2_layout/5_grid_system/index.html
+++ b/2_layout/5_grid_system/index.html
@@ -9,26 +9,26 @@
 </head>
 <body>
 <div class="container">
-   <div class="row">
-      <div class="col">12</div>
+  <div class="row">
+      <div class="col-12">12</div>
    </div>
    <div class="row">
-      <div class="col-6">6</div>
-      <div class="col-6">6</div>
+      <div class="col-6">col 6</div>
+      <div class="col-6">col 6</div>
    </div>
    <div class="row">
-      <div class="col-3">3</div>
-      <div class="col-3">3</div>
-      <div class="col-3">3</div>
-      <div class="col-3">3</div>
+      <div class="col-3">col3</div>
+      <div class="col-3">col3</div>
+      <div class="col-3">col3</div>
+      <div class="col-3">col 3</div>
    </div>
    <div class="row">
-      <div class="col-4">4</div>
-      <div class="col-4">4</div>
-      <div class="col-4">4</div>
+      <div class="col-4">col 4</div>
+      <div class="col-4">col 4</div>
+      <div class="col-4">col 4</div>
    </div>
 </div>
-
+  
 
     <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/@popperjs/core@2"></script>
