--- a/2_layout/6_grid_system-small/index.html
+++ b/2_layout/6_grid_system-small/index.html
@@ -1,4 +1,4 @@
-\<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,17 +9,17 @@
 </head>
 <body>
 <div class="container">
-   <div class="row">
-      <div class="col-sm-8">sm-8</div>
-      <div class="col-sm-4">sm-4</div>
+  <div class="row">
+   <div class="col-sm-8">sm-8</div>
+   <div class="col-sm-4">sm-4</div>
   </div>
- <div class="row">
-    <div class="col">auto</div>
-    <div class="col-sm-5">sm-5</div>
-    <div class="col">auto</div>
- </div>
-
-
+  <div class="row">
+      <div class="col">auto</div>
+      <div class="col-sm-5">sm-5</div>
+      <div class="col">auto</div>
+  </div>
+</div>
+  
 
     <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/@popperjs/core@2"></script>
