--- a/2_layout/7_grid_system-mobile/index.html
+++ b/2_layout/7_grid_system-mobile/index.html
@@ -1,4 +1,4 @@
-\<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,23 +9,23 @@
 </head>
 <body>
 <div class="container">
-   <div class="row">
-      <div class="col col-md-8"></div>
-      <div class="col col-md-4"></div>
-     </div>
-     <div class="row">
-          <div class="col-5 col-md-2"></div>
-          <div class="col-2 col-md-4"></div>
-          <div class="col-5 col-md-4"></div>
-     </div>
-     <div class="row">
-          <div class="col-4 col-sm-2 col-md-3"></div>
-          <div class="col-4 col-sm-2 col-md-3"></div>
-          <div class="col-2 col-sm-4 col-md-3"></div>
-          <div class="col-2 col-sm-4 col-md-3"></div> 
-     </div>
-
-
+    <div class="row">
+        <div class="col col-md-8"></div>
+        <div class="col col-md-4"></div>
+    </div>
+    <div class="row">
+        <div class="col-5 col-md-2"></div>
+        <div class="col-2 col-md-4"></div>
+        <div class="col-5 col-md-4"></div>
+    </div>
+    <div class="row">
+        <div class="col-4 col-sm-2 col-md-3"></div>
+        <div class="col-4 col-sm-2 col-md-3"></div>
+        <div class="col-2 col-sm-4 col-md-3"></div>
+        <div class="col-2 col-sm-4 col-md-3"></div>
+    </div>
+</div>
+  
 
     <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/@popperjs/core@2"></script>
