--- a/2_layout/9_grid_system-offset/index.html
+++ b/2_layout/9_grid_system-offset/index.html
@@ -8,34 +8,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<!--offset-sm ocupa o espaço de uma div (Div fantasma)-->
-
- <div class="container"> 
-  <div class="row">
-    <div class="col-sm-4">Div A</div>
-
-    <div class="col-sm-4 offset-sm-4">Div B</div>
-
-  </div>
-  <div class="row">
-    <div class="col-sm-5">Div A</div>
-
-    <div class="col-sm-5 offset-sm-2">Div C</div>
-
-  </div>
-  <div class="row">
-    <div class="col-sm-2">Div C</div>
-
-    <div class="col-sm-2 offset-sm-2">Div D</div>
-
-    <div class="col-sm-2">Div E</div>
-
-    <div class="col-sm-2 offset-sm-2">Div F</div>
-
-  </div>
-
+    <!--offset-sm ocupa o espaço de uma div (div fantasma)-->
+<div class="container">
+    <div class="row">
+        <div class="col-sm-4">Div A</div>
+        <div class="col-sm-4 offset-sm-4">Div C</div>
+    </div>
+    <div class="row">
+        <div class="col-lg-4">Div A</div>
+        <div class="col-lg-6 offset-lg-2">Div C</div>
+    </div>
+    <div class="row">
+        <div class="col-md-2">Div A</div>
+        <div class="col-md-2 offset-md-2">Div C</div>
+        <div class="col-md-2">Div D</div>
+        <div class="col-md-2  offset-md-2">Div F</div>
+    </div>
 </div>
+  
 
     <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/@popperjs/core@2"></script>
