--- a/3_flexBox/2_flexrow_direcao_x/index.html
+++ b/3_flexBox/2_flexrow_direcao_x/index.html
@@ -8,21 +8,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!--nesting: são os níveis de classes.-->
-<div class="container">
-    <div class="row">
-        <div class="bg col-12">Nível 1
-            <div class="row">
-                <div class="bg col-8">Nível 2
-                    <div class="row">
-                        <div class="bg col-3">Nível 3</div>
-                        <div class="bg col-9">Nível 3</div>
-                    </div>
-                </div>
-                <div class="bg col-4">Nível 2</div>
-            </div>
-        </div>
-    </div>
+   
+<div class="container"> 
+    <!--flex-row por padrão vem alinhado para esquerda-->
+   <div class="d-flex flex-row">
+        <div class="p-2">1</div>
+        <div class="p-2">2</div>
+        <div class="p-2">3</div>
+   </div>
+
+<!--flex-row-reverse alinha para direita-->
+   <div class="d-flex flex-row-reverse">
+    <div class="p-2">1</div>
+    <div class="p-2">2</div>
+    <div class="p-2">3</div>
+</div>
+
+<!--flex-sm-row-reverse alinha para direita acima da resolução sm-->
+<div class="d-flex flex-sm-row-reverse">
+    <div class="p-2">1</div>
+    <div class="p-2">2</div>
+    <div class="p-2">3</div>
+</div>
+
 </div>
   
 
